package org.fluentcodes.projects.elasticobjects;

import static org.fluentcodes.projects.elasticobjects.CEO_STATIC.CSV;
import static org.fluentcodes.projects.elasticobjects.EO_STATIC.*;
import static org.fluentcodes.projects.elasticobjects.XEO_STATIC.XLSX;

public class BEO_STATIC {
    public static final String BUILDER_EO = "builder-eo";
    public static final String MODULE_NAME = BUILDER_EO;
    public static final String MODULE_SHORT = "MODULE_NAME";

    public static final String X_CALLS_DB = "ConfigsCallsDb.xlsx";

    public static final String X_CALLS_LIST = "ConfigsCallsList.xlsx";
    public static final String XLSX_XLSX = X_CALLS_LIST + ":" + XLSX;
    public static final String CSV_XLSX = X_CALLS_LIST + ":" + CSV;

    public static final String X_CALLS = "actions.xlsx";
    public static final String FILE_XLXS = X_CALLS + ":" + FILE;
    public static final String TEMPLATE_XLSX = X_CALLS + ":" + TEMPLATE;
    public static final String JSON_XLSX = X_CALLS + ":" + JSON;
    public static final String HOST_XLSX = X_CALLS + ":" + HOST;
    public static final String VALUE_XLSX = X_CALLS + ":" + VALUE;


    public static final String X_MODELS = "models.xlsx";
    public static final String MODEL_XLSX = X_MODELS + ":" + MODEL;
    public static final String FIELD_XLSX = X_MODELS + ":" + FIELD;
    public static final String USER_XLSX = X_MODELS + ":" + USER;
    public static final String ROLE_XLSX = X_MODELS + ":" + ROLE;

    public static final String T_STATIC_FROM_XLSX_TPL = "StaticFromXlsx.tpl";

    public static final String FILE_ACTIONS_XLSX = "actions.xlsx";
    public static final String FILE_DATA_XLSX = "data.xlsx";

    public static final String JSON_MODELS_XLSX_MODEL = "models.xlsx:Model";


}
