package org.fluentcodes.projects.elasticobjects;

/**
 * Created by werner.diwischek on 17.02.18.
 */
public class ProjectCreator extends Creator {
}
