package org.fluentcodes.projects.elasticobjects;

public class B_STATIC {
    public static final String BUILDER = "builder";
    public static final String MODULE_NAME = BUILDER;

    public static final String TPL_JSON_CONTROL = "JsonControl.tpl";

    public static final String T_CONFIG_BUILDER_SETTER_TPL = "ConfigBuilderSetter.tpl";
    public static final String T_CONSTANTS_LOOP_TPL = "ConstantsLoop.tpl";
    public static final String T_CONSTANTS_CREATE_TPL = "ConstantsCreate.tpl";
    public static final String T_STATIC_EMPTY_TPL = "StaticEmpty.tpl";
    public static final String T_STATIC_VALUES_ENTRY_TPL = "StaticValuesEntry.tpl";
    public static final String T_STATIC_VALUES_EO_STATIC_TPL = "StaticValuesEOStatic.tpl";
    public static final String T_STATIC_VALUES_LOOP_TPL = "StaticValuesLoop.tpl";

    public static final String T_CACHE_CREATE_TPL = "CACHECreate.tpl";
    public static final String T_BEAN_SETTER_TPL = "BeanSetter.tpl";
    public static final String T_BEAN_CREATE_TPL = "BEANCreate.tpl";
    public static final String T_BEAN_INSTANCE_VARS_TPL = "BeanInstanceVars.tpl";
    public static final String T_ALL_KEYS_TPL = "AllKeys.tpl";
    public static final String T_CACHE_INSTANCE_VARS_TPL = "CacheInstanceVars.tpl";
    public static final String T_CACHE_SETTER_TPL = "CacheSetter.tpl";
    public static final String T_CACHE_GETTER_TPL = "CacheGetter.tpl";
}
