@startuml

title __ELASTICOBJECTS's Class Diagram__\n

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class BEO_STATIC {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class B_STATIC {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class Creator {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class Creator {
      }
    }
  }
  

  package  {
    class CreatorEO {
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class CreatorJsonConfig {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      interface CreatorParams {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      interface CreatorParams {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class DB_EO_STATIC {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class DbConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class DbIO {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.calls {
        class DbQueryCall {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class DbQueryConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class DbQueryIO {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.calls {
        class DbSqlCall {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class DbSqlConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        enum DbTypes {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.executor {
        class ExecutorMD {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class HConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class HIO {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.calls {
        class HQueryCall {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class HQueryConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class HQueryIO {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.calls {
        class HSqlCall {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.config {
        class HSqlConfig {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class H_EO_STATIC {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.models {
        class ModelAnnotated {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      class ProjectCreator {
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.executor {
        class ValueFieldsJava {
        }
      }
    }
  }
  

  package  {
    package org.fluentcodes.projects.elasticobjects {
      package org.fluentcodes.projects.elasticobjects.executor {
        class ValueModelsJava {
        }
      }
    }
  }
  

  DbQueryIO -up-|> ListIOInterface
  HConfig -up-|> EOExtension
  HQueryIO -up-|> ListIOInterface
  ModelAnnotated -up-|> Model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
